--- a/explore.ipynb
+++ b/explore.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,27 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_urbansound = pd.read_csv(\"downloads/UrbanSound8K/metadata/UrbanSound8K.csv\")\n",
     "\n",
-    "if v:print(df_urbansound[\"class\"].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "if v:print(df_urbansound[\"class\"].value_counts())\n",
+    "\n",
     "if v:print(df_urbansound.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,11 +103,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_ind = {index:genre for index, genre in zip(df_fma_small.index, df_fma_small[\"track\", \"genre_top\"])}"
+    "dict_ind = {index:genre for index, genre in zip(df_fma_small.index, df_fma_small[\"track\", \"genre_top\"])}\n",
+    "\n",
+    "dict_ind_plus = {index:\",\".join(genre) for index, genre in zip(df_fma_small.index, temp)}\n",
+    "\n",
+    "final_dict = {\n",
+    "    index : f\"Genre: {dict_ind[index]} | Tags: {dict_ind_plus[index].replace(',',';')}\" for index in dict_ind.keys()\n",
+    "}\n",
+    "\n",
+    "df_genre = pd.DataFrame.from_dict(final_dict, orient=\"index\", columns=[\"Genre\"])\n",
+    "\n",
+    "#df_genre.to_csv(\"genre.csv\") # Uncomment to save to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123094\n",
+      "Found\n",
+      "/nasbrain/j21lys/DL_2023_CLAP/downloads/fma_small/123/123094.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guess the genre\n",
+    "\n",
+    "import random as rd\n",
+    "import os\n",
+    "\n",
+    "# {'Experimental', 'Rock', 'Electronic', 'Folk', 'Pop', 'Instrumental', 'Hip-Hop', 'International'}\n",
+    "\n",
+    "index = rd.choice(list(final_dict.keys()))\n",
+    "\n",
+    "print(index)\n",
+    "def search(ind, root):\n",
+    "    for subdir, dirs, files in os.walk(root):\n",
+    "        for file in files:\n",
+    "            filename = file.split(\".\")[0]\n",
+    "            if all([c in \"0123456789\" for c in filename]):\n",
+    "                filename = int(filename)\n",
+    "            else:\n",
+    "                continue    \n",
+    "            if filename == ind:\n",
+    "                print(\"Found\")\n",
+    "                return os.path.join(subdir, file)\n",
+    "            \n",
+    "path = search(index, \"downloads/fma_small\")\n",
+    "\n",
+    "print(os.path.join(os.getcwd(), path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong! The correct answer is Folk\n",
+      "Details Genre: Folk | Tags: Folk;Singer-Songwriter\n"
+     ]
+    }
+   ],
+   "source": [
+    "choice = input(\"Genre of the song: \")\n",
+    "\n",
+    "if choice.lower() == dict_ind[index].lower():\n",
+    "    print(\"Correct!\")\n",
+    "else:\n",
+    "    print(f\"Wrong! The correct answer is {dict_ind[index]}\")\n",
+    "\n",
+    "print(\"Details\", final_dict[index])"
    ]
   }
  ],
